--- a/content/release-notes/2023-03-16-console.md
+++ b/content/release-notes/2023-03-16-console.md
@@ -1,7 +1,11 @@
+### Fractional compute sizes
+
+Added support for fractional Compute Units (CU), enabling configuration of compute endpoints with a quarter or half CU. One CU has 1 vCPU and 4 GB of RAM.
+![Fractional compute sizes](/docs/relnotes/fractional_computes.png)
+
 ### Improvements and fixes
 
 - API: Added a `suspend_timeout_seconds` property to the Endpoint API, which specifies the duration of inactivity (in seconds) after which a compute endpoint is automatically suspended.
-- UI: Added support for fractional Compute Units (CU), enabling configuration of compute endpoints with a quarter or half CU. One CU has 1 vCPU and 4 GB of RAM.
 - UI: Adjusted the labels and text on the **Edit Compute Endpoint** dialog.
 - UI: Added support for Pro Plan customers to change payment details. Payment details can be changed by editing the **Payment method** on the **Billing** page in the Neon Console.
 - UI: Added a **Request subscription cancellation** button to the **Billing** page in the Neon Console, which opens an **Unsubscribe** dialog. Customers can use the dialog to submit a plan cancellation request.
