--- a/content/release-notes/2023-07-06-console.md
+++ b/content/release-notes/2023-07-06-console.md
@@ -1,4 +1,4 @@
-## Pro Plan Cost Estimation tool enhancements
+### Pro Plan Cost Estimation tool enhancements
 
 **Typical use cases** and **Custom** tabs were added to the **Pro Plan Cost Estimation** tool that is accessible from the **Billing** page on the Neon Free Tier. This tool helps you estimate what your monthly cost would be if you upgraded to the [Neon Pro plan](/docs/introduction/pro-plan).
 
