--- a/content/release-notes/2023-03-30-drivers.md
+++ b/content/release-notes/2023-03-30-drivers.md
@@ -1,6 +1,6 @@
-### Improvements and fixes
+### Deno support for the Neon serverless driver
 
-- The [Neon serverless driver](https://github.com/neondatabase/serverless) was verified to work with [Deno](https://github.com/denoland/deno). Where you would install another Postgres driver, run `npm install @neondatabase/serverless` instead, and then import the Neon serverless driver:
+The [Neon serverless driver](https://github.com/neondatabase/serverless) was verified to work with [Deno](https://github.com/denoland/deno). Where you would install another Postgres driver, run `npm install @neondatabase/serverless` instead, and then import the Neon serverless driver:
 
   ```js
   import { Pool } from 'npm:@neondatabase/serverless';
