--- a/content/release-notes/2023-05-29-console.md
+++ b/content/release-notes/2023-05-29-console.md
@@ -8,4 +8,4 @@ The Postgres `max_connections` setting is now set according to your compute size
   
 ### Improvements and fixes
 
-- UI: Updated the **Request Downgrade** modal on the **Billing** page for Neon Pro accounts. The button label was changed, the screen height was adjusted, and other stylistic changes were applied.
+UI: Updated the **Request Downgrade** modal on the **Billing** page for Neon Pro accounts. The button label was changed, the screen height was adjusted, and other stylistic changes were applied.
