--- a/content/release-notes/2023-06-08-console.md
+++ b/content/release-notes/2023-06-08-console.md
@@ -8,5 +8,4 @@ Introduced a **Pro Plan Cost Estimation** tool designed to assist Free Tier user
 
 ### Improvements and fixes
 
-- UI: The code examples accessible from the **Connect Details** widget on the Neon **Dashboard** now include a `-pooler` suffix in the endpoint hostname when the **Pooled connection** tab is selected. You no longer need to add this suffix manually.
-
+UI: The code examples accessible from the **Connect Details** widget on the Neon **Dashboard** now include a `-pooler` suffix in the endpoint hostname when the **Pooled connection** tab is selected. You no longer need to add this suffix manually.
