--- a/content/release-notes/2023-03-15-plans.md
+++ b/content/release-notes/2023-03-15-plans.md
@@ -1,9 +1,9 @@
-### Improvements and fixes
+### Introducing Neon Paid Plans
 
-- In addition to the [Free Tier](/docs/introduction/free-tier), Neon now offers the following paid plans:
+In addition to the [Free Tier](/docs/introduction/free-tier), Neon now offers the following paid plans:
   
-  - **Pro**: A usage-based plan, ideal for small-to-medium teams. With the Pro plan, you get up to 20 projects, unlimited branches, unlimited compute time, up to 200 GB of storage, and access to paid plan features such as project sharing, autoscaling (_coming soon_), and configurable auto-suspend compute (_coming soon_).
-  - **Enterprise**: A volume-based plan for medium-to-large teams and database fleets. Includes all Pro plan features plus customized limits and potential for volume discounts.
-  - **Platform Partnership**: A volume-based plan for large teams, database fleets, and resale. Includes all Enterprise plan features  plus resale support.
+- **Pro**: A usage-based plan, ideal for small-to-medium teams. With the Pro plan, you get up to 20 projects, unlimited branches, unlimited compute time, up to 200 GB of storage, and access to paid plan features such as project sharing, autoscaling (_coming soon_), and configurable auto-suspend compute (_coming soon_).
+- **Enterprise**: A volume-based plan for medium-to-large teams and database fleets. Includes all Pro plan features plus customized limits and potential for volume discounts.
+- **Platform Partnership**: A volume-based plan for large teams, database fleets, and resale. Includes all Enterprise plan features  plus resale support.
 
-  You can learn more about Neon's paid plans and pricing on the Neon [Pricing](https://neon.tech/pricing) page.
+You can learn more about Neon's paid plans and pricing on the Neon [Pricing](https://neon.tech/pricing) page.
