--- a/content/release-notes/2022-06-08-console.md
+++ b/content/release-notes/2022-06-08-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Changed the `user_id` type from `int64` to `uuid`.
 - API: Implemented a unified JSON error response where possible, in the format of `{ "message": "error text" }`.
