--- a/content/release-notes/2022-07-11-console.md
+++ b/content/release-notes/2022-07-11-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Added a `pooler_enabled` property to the [project update API call](https://api-docs.neon.tech/reference/updateproject) to indicate whether or not connection pooling is enabled.
 - API: Fixed several bugs that could cause intermittent 409 responses, which indicate a request conflict with the current state of the target resource.
