--- a/content/release-notes/2022-08-04-console.md
+++ b/content/release-notes/2022-08-04-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Added a new version of the operations executor that includes various stability and observability improvements.
 - Control Plane: Compute node logs are now dumped if the startup process fails.
