--- a/content/release-notes/2022-08-08-console.md
+++ b/content/release-notes/2022-08-08-console.md
@@ -1,3 +1,3 @@
-### Improvements and fixes
+### Fixes & improvements
 
 UI: Fixed an issue that prevented project status updates from being communicated to the Neon Console. Prior to this fix, the previous project status was reflected in the Neon Console until the page was reloaded.
