--- a/content/release-notes/2022-08-15-console.md
+++ b/content/release-notes/2022-08-15-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Set `max_replication_write_lag` to `15 MB` to tune the backpressure mechanism and improve PostgresSQL responsiveness under load.
 - Control Plane: Improved the ability to investigate performance issues by collecting and saving more detailed compute node startup time metrics.
