--- a/content/release-notes/2022-08-25-console.md
+++ b/content/release-notes/2022-08-25-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Added the ability to select Safekeepers from different availability zones for new projects.
 - UI: Added a **Tables** page to the Neon Console for viewing database schemas and tables. Drop-down menus permit navigating between project databases. Table data can be viewed by selecting the table from the sidebar.
