--- a/content/release-notes/2022-09-02-console.md
+++ b/content/release-notes/2022-09-02-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Fixed authentication of concurrent proxy connections to an idle compute node. Previously, one of the concurrent proxy connection attempts would fail with a `Failed to connect to the compute node` error.
 - UI: Added functionality that enables providing an OAuth app name to a client.
