--- a/content/release-notes/2022-09-28-console.md
+++ b/content/release-notes/2022-09-28-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Added a `protected: boolean` flag to the roles public API response.
 - API: Changed region and platform ids from serial numbers to strings in the public API.
