--- a/content/release-notes/2022-11-04-console.md
+++ b/content/release-notes/2022-11-04-console.md
@@ -29,7 +29,7 @@ The old hostname format continues to be supported for projects created before th
 
 Added highlighting support for [Postgres 15 SQL Keywords](https://www.postgresql.org/docs/15/sql-keywords-appendix.html) to Neon's SQL Editor. Keywords are highlighted when entered in the SQL Editor.
 
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Improved handling of OAuth consent challenges. A user is now directed to the destination URL to complete the login or consent request instead of receiving a `410 Gone` error when resubmitting an OAuth consent challenge.
 - Control Plane: Fixed memory leaks that could occur for background operations started in a context that does not expire. An operation failure could have resulted in resources not being cleaned up.
