--- a/content/release-notes/2022-11-17-console.md
+++ b/content/release-notes/2022-11-17-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Introduced a maintenance mode for Neon projects. When a project is placed into maintenance mode, its endpoints are forcibly suspended and modifications are not permitted until maintenance is completed.
 - Control Plane: Added support for Cross-Origin Resource Sharing (CORS) to the Neon API v1 and v2.
