--- a/content/release-notes/2022-12-01-console.md
+++ b/content/release-notes/2022-12-01-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Creating branches using the Neon API v1 is now deprecated.
 - API: Added support for cursor pagination when listing operations.
