--- a/content/release-notes/2022-12-06-console.md
+++ b/content/release-notes/2022-12-06-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Added request and response body examples to the Neon API v2 specification.
 - API: Disabled deleting or changing the endpoint compute instance associated with a project's root branch.
