--- a/content/release-notes/2023-02-02-console.md
+++ b/content/release-notes/2023-02-02-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: The response body for projects, branches, and endpoints now exposes a `creation_source` property. Currently, the `creation_source` property identifies the `console` as the creation source in all cases but will eventually identify other sources, such as the Neon API.
 - API: Listing projects with the Neon API now supports cursor-based pagination. Pagination enables limiting the number of responses displayed at one time, which is useful when a response includes a large number of projects. By default, the first 10 projects are returned. You can set the `limit` parameter to request up to 100 projects.
