--- a/content/release-notes/2023-02-06-console.md
+++ b/content/release-notes/2023-02-06-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Integrations: You can now integrate Neon with your Vercel project directly from your Vercel account. The new integration, which is currently in Beta, is available from the [Vercel Integration Marketplace](https://vercel.com/integrations/neon). The integration allows you to connect your Vercel project to a new or existing Neon project. It also enables creating a database branch for each Vercel preview deployment and for your Vercel development environment. For more information about the Neon-Vercel integration, see [Connect Vercel and Neon](/docs/guides/vercel).
 - Control Plane: You can now enable connection pooling in Neon for individual connections. Pooling is enabled by adding a `-pooler` suffix to the endpoint ID in the Neon hostname. For example:
