--- a/content/release-notes/2023-02-10-console.md
+++ b/content/release-notes/2023-02-10-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Added a `quota_reset_at` property to the `Project`  response schema in the Neon API. This property displays a future date indicating when a resource consumption quota will be reset. For example, the Neon Free Tier offers 100 compute hours per month. The `quota_reset_at` property shows when that quota will be set back to 100 hours.
 - API: Added a `compute_seconds_limit` property to the `CurrentUserInfoResponse` schema in the Neon API. This property defines the monthly compute limit in terms of compute seconds.
