--- a/content/release-notes/2023-02-17-console.md
+++ b/content/release-notes/2023-02-17-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: The Neon API specification now shows the default (`10`) and maximum (`100`) pagination values for the [List projects API endpoint](https://api-docs.neon.tech/reference/listprojects). These settings were enforced previously but were not included in the Neon API specification.
 - API: Updating a project name resulted in the loss of values defined in `default_endpoint_settings` property, which defines custom settings for project's compute endpoints.
