--- a/content/release-notes/2023-02-24-console.md
+++ b/content/release-notes/2023-02-24-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: The `connection_uris` property in the [Create branch](https://api-docs.neon.tech/reference/createprojectbranch) response is no longer a required property, meaning that the field is not included in the response if the value is empty. The `connection_uris` property is now returned only in cases where a branch has only a single database and role.
 - API: Added property descriptions for `Project`, `Branch`, `Endpoint`, `Database`, `Role`, and `Operation` endpoints.
