--- a/content/release-notes/2023-03-14-console.md
+++ b/content/release-notes/2023-03-14-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Removed the `physical_size` property from the Branch response body in the Neon API.
 - Control Plane: Addressed a memory leak that affected Neon Console performance. A memory limit was put in place prevent similar issues.
