--- a/content/release-notes/2023-03-22-console.md
+++ b/content/release-notes/2023-03-22-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Updated the `region_id` description in the Project API to include a link to the list of regions supported by Neon.
 - UI: Revised the style of the **Unsubscribe** dialog accessed from the **Billing** page in the Neon Console.
