--- a/content/release-notes/2023-04-11-console.md
+++ b/content/release-notes/2023-04-11-console.md
@@ -12,7 +12,7 @@ Added a **Storage** widget to the Neon **Dashboard** that shows current project 
 
 Added support for the [pg_stat_statements](https://www.postgresql.org/docs/current/pgstatstatements.html) extension, which provides tracking of plan and execution statistics for SQL statements. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
 
-## Improvements and fixes
+## Fixes & improvements
 
 - API: Added `consumption_period_start` and `consumption_period_end` properties to the [Get project details](https://api-docs.neon.tech/reference/getproject) API. These properties provide the date and time when Neon starts and stops measuring usage for the current billing period.
 - API: Project limits for shared projects are now checked against the project owner's limits. Previously, limits were checked against the project user's limits, which could prevent a Free Tier user from making full use of a project shared by a Pro plan user.
