--- a/content/release-notes/2023-04-14-console.md
+++ b/content/release-notes/2023-04-14-console.md
@@ -2,7 +2,7 @@
 
 Added support for the [timescaledb](https://github.com/timescale/timescaledb) extension, which scales Postgres for time-series data. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
 
-### Improvements and fixes
+### Fixes & improvements
 
 - UI: Added hover help to the `PRIMARY` branch badge that identifies a branch as the [primary branch](/docs/reference/glossary#primary-branch) for a project. The help message states that the compute endpoint associated with the primary branch remains accessible if you exceed project limits, ensuring uninterrupted access to the data on your primary branch.
 - UI: Fixed the Neon **Project Creation** dialog to display a value for the **Fixed Size** compute option. A value was not displayed previously.
