--- a/content/release-notes/2023-07-24-console.md
+++ b/content/release-notes/2023-07-24-console.md
@@ -3,7 +3,7 @@
 Neon now provides an **Auto-suspend delay** control on the project creation dialog, enabling Neon Pro plan users to define a default **Auto-suspend delay** setting for a project's compute endpoints. The **Auto-suspend delay** setting defines the period of inactivity after which a compute endpoint is automatically suspended. For more information, see [Create a project](/docs/manage/projects#create-a-project).
 ![Auto-suspend delay project creation dialog](/docs/relnotes/auto_suspend_delay_create_project.png)
 
-### Improvements and fixes
+### Fixes & improvements
 
 - UI: Updated the **Usage** widget on the Neon Dashboard for Free Tier accounts to provide additional details about the _Active time_ usage metric.
 - UI: Fixed OAuth page styling and other minor style issues for the Neon Console dark mode theme.
