--- a/content/release-notes/2022-07-20-console.md
+++ b/content/release-notes/2022-07-20-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Changed the error reported when a concurrent operation on a project prevents acquiring a project lock. Error `423 Locked` is now reported instead of `409 Conflict`.
 - Control plane: Implemented the usage of several instances for serving the public API and web UI to enable zero-downtime deployments.
