--- a/content/release-notes/2022-08-31-console.md
+++ b/content/release-notes/2022-08-31-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: Implemented OAuth backend support and OAuth consent screens, which enable granting OAuth applications permission to create projects on behalf of users. Services interested in OAuth integration with Neon should contact [partnerships@neon.tech](mailto:partnerships@neon.tech).
 - UI: Fixed the syntax highlighting for Golang snippets.
