--- a/content/release-notes/2022-10-04-console.md
+++ b/content/release-notes/2022-10-04-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - Control Plane: The availability checker now waits for the project operations queue to clear before starting.
 - Control Plane: Operations for redo are now selected based on the correct status.
