--- a/content/release-notes/2022-12-14-console.md
+++ b/content/release-notes/2022-12-14-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: The request body for the create branch API is now optional. Previously, a request body with `branch` or `endpoints` attributes was required. Without a request body, the default behavior is to create a branch from the project's root branch (`main`) without an endpoint, and the branch name is auto-generated.
 - Control Plane: Neon now attempts to deploy compute resources in the same availability zone as the [Pageserver](/docs/reference/glossary#pageserver).
