--- a/content/release-notes/2023-02-08-console.md
+++ b/content/release-notes/2023-02-08-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: The `default_endpoint_settings` property in the `Project` schema was split into `default_endpoint_settings` and `settings`. The `default_endpoint_settings` property is now used exclusively for Postgres specific settings applied to a project's compute endpoints. The `settings` property is used for general project settings such as the compute `quota`. If you have been using `createProject` or `updateProject` API requests in your code, you may need to update those requests to account for this change.
 - UI: Updated various UI elements in the Neon Console to rename **Endpoints** to **Compute endpoints**. The term _Endpoint_ was not specific enough to accurately reflect the resource being referred to. A **Compute endpoint** in Neon refers the compute instance that runs Postgres.
