--- a/content/release-notes/2023-03-06-console.md
+++ b/content/release-notes/2023-03-06-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Adjusted the tags in the Neon API specification that assign endpoints to categories. The new [Neon API reference](https://api-docs.neon.tech/reference/getting-started-with-neon-api) displays one endpoint per page. Multiple tags assigned to an endpoint resulted in endpoints not being listed under their primary category.
 - UI: Updated the labels, links, and units shown on the **Project limits** widget on the Neon **Dashboard**.
