--- a/content/release-notes/2023-03-24-console.md
+++ b/content/release-notes/2023-03-24-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - UI: Adjusted the text in the **Usage** widget on the Neon **Dashboard** that describes the expected delay time for usage metrics.
 - UI: Adjusted the **Project storage** metric labels in the **Usage** widget to identify one as **Project storage (usage)**, which is a measure of monthly storage in GiB-hrs, and the other as **Project storage (size)**, which is a measure of the current data size.
