--- a/content/release-notes/2023-03-29-console.md
+++ b/content/release-notes/2023-03-29-console.md
@@ -2,7 +2,7 @@
 
 A Beta version of Neon's _Autoscaling_ feature is now available for [Pro plan](/docs/introduction/pro-plan) users in selected regions. Autoscaling allows you to specify a minimum and maximum compute size. Neon scales compute resources up and down within the specified compute size boundaries to meet workload demand. The Autoscaling feature can be enabled when [creating a Neon project](/docs/manage/projects#create-a-project) or by [editing a compute endpoint](/docs/manage/endpoints#edit-a-compute-endpoint).
 
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Removed the `quota_reset_at` property from the Project consumption endpoint used by Neon partners. The property did not provide useful data.
 - Control Plane: Free Tier compute endpoints are now assigned 0.25 Compute Units (CU) by default, which is equal 0.25 vCPUs and 1 GB of RAM.
