--- a/content/release-notes/2023-05-11-console.md
+++ b/content/release-notes/2023-05-11-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - UI: Adjusted how Autoscaling minimum and maximum compute sizes are displayed in the **Compute endpoints** table on the branch details page.
 - UI: Added a **History retention** metric to the **Storage** widget on the Neon **Dashboard**. By default, Neon retains a 7-day history of data changes to support [point-in-time restore](/docs/reference/glossary#point-in-time-restore). History retention will become a configurable setting in a future release.
