--- a/content/release-notes/2023-07-06-console.md
+++ b/content/release-notes/2023-07-06-console.md
@@ -6,7 +6,7 @@
 - The **Custom** tab allows you to estimate costs based on compute and storage usage values that you provide.
 ![Pro plan cost estimation tool](/docs/relnotes/pro_plan_cost_estimator_update.png)
 
-### Improvements and fixes
+### Fixes & improvements
 
 - API: Added a `suspend_timeout_seconds` parameter to the  `default_endpoint_settings` object in the [Create project](https://api-docs.neon.tech/reference/createproject) API. This parameter defines the amount of time before the project's default compute endpoint is suspended due to inactivity. The default is 300 seconds (5 minutes).
 - API: Deprecated the `autoscaling_limit_min_cu` and `autoscaling_limit_min_cu` parameters in the [Create project](https://api-docs.neon.tech/reference/createproject) `project` object. You can configure these parameters in the `default_endpoint_settings` object instead when creating a project.
