--- a/content/release-notes/2023-07-10-console.md
+++ b/content/release-notes/2023-07-10-console.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Fixes & improvements
 
 - UI: Added keyboard support (**Tab** + **Enter**) for switching  between  **Explain** and **Analyze** tabs in the **SQL Editor**.
 - UI: Fixed calculations in the **Pro Plan Cost Estimation** tool accessible from the **Billing** page on the Neon Free Tier. The issue resulted in incorrect cost estimates.
