chore: update screenshots

--- a/content/release-notes/2023-05-19-console.md
+++ b/content/release-notes/2023-05-19-console.md
@@ -7,7 +7,7 @@ Neon's Autoscaling feature now supports fractional (1/4 and 1/2) minimum compute
 ### Free Tier "Billing" page
 
 Added a **Billing** page to the Neon Console where Free Tier users can view [Free Tier](/docs/introduction/free-tier) limits and learn about the benefits of upgrading to the [Neon Pro plan](/docs/introduction/pro-plan). The **Billing** page is accessible from the sidebar in the Neon Console.
-  ![Free Tier Billing page](/docs/relnotes/free_tier_billing.png)
+  ![Free Tier Billing page](/docs/relnotes/free_tier_billing.jpg)
 
 ### Fixes & improvements
 
