--- a/content/release-notes/2023-07-06-console.md
+++ b/content/release-notes/2023-07-06-console.md
@@ -4,7 +4,7 @@
 
 - The **Typical uses case** tab provides cost estimates for predefined **Prototype**, **Launch**, and **Scale** use cases.
 - The **Custom** tab allows you to estimate costs based on compute and storage usage values that you provide.
-![Pro plan cost estimation tool](/docs/relnotes/pro_plan_cost_estimator_update.png)
+![Pro plan cost estimation tool](/docs/relnotes/pro_plan_cost_estimator_update.jpg)
 
 ### Fixes & improvements
 
