--- a/content/release-notes/2023-07-12-console.md
+++ b/content/release-notes/2023-07-12-console.md
@@ -1,7 +1,7 @@
 ### Introducing the Neon CLI
 
 Neon is pleased to announce the release of the [Neon CLI](https://neon.tech/docs/reference/neon-cli), a command-line interface that enables developers to manage Neon resources directly from the terminal. The Neon CLI supports numerous operations, including creating and managing projects, branches, databases, roles, read replicas, and more, directly from your terminal. You can also use Neon CLI commands in developer workflows and pipelines.
-![Neon CLI help](/docs/relnotes/neon_cli.png)
+![Neon CLI help](/docs/relnotes/neon_cli.jpg)
 
 You can install the Neon CLI with a single command:
 
