--- a/content/release-notes/2023-08-16-drivers.md
+++ b/content/release-notes/2023-08-16-drivers.md
@@ -4,7 +4,7 @@ The [Neon serverless driver](https://github.com/neondatabase/serverless) is a lo
 
 The following driver enhancements have been introduced:
 
-#### Support for larger response sizes for queries over HTTP
+#### Larger response size for queries over HTTP
 
 The maximum response size for queries over HTTP was raised from 1 MB to 10 MB.
 
