--- a/content/release-notes/2023-08-16-drivers.md
+++ b/content/release-notes/2023-08-16-drivers.md
@@ -6,7 +6,7 @@ The driver now supports larger response sizes and batched queries over HTTP.
 
 #### Larger response sizes
 
-The maximum response size for queries over HTTP was raised from 1 MB to 10 MB.
+The maximum response size for queries was raised from 1 MB to 10 MB.
 
 #### Batched queries
 
