--- a/content/release-notes/2023-08-28-console.md
+++ b/content/release-notes/2023-08-28-console.md
@@ -1,6 +1,8 @@
 ### Fixes & improvements
 
-- UI: Improved the **Pro Plan Cost Estimation** tool for Neon Free Tier users. To ensure accuracy, the tool now displays cost estimates only after following conditions are met:
+- Control Plane: The [Availability Checker](/docs/reference/glossary#availability-checker) now uses the smallest Neon compute size (.25 Compute Units) to verify that a project's computes can start and read and write data. This change allows the Availability Checker to use pre-started computes more often, which shortens availability check operation time and reduces the impact of availability checks on infrastructure and compute costs.
+- Control Plane: Removed a write check that was performed on a read-only compute instance. A write check is only necessary for read-write compute instances.
+- UI: Improved the **Pro Plan Cost Estimation** tool for Neon Free Tier users. To ensure accuracy, the tool now displays cost estimates only after the following conditions are met:
 
   - Your account has been registered for at least one month.
   - You have a Neon project that was created more than a month ago.
