--- a/content/release-notes/2023-08-28-console.md
+++ b/content/release-notes/2023-08-28-console.md
@@ -2,11 +2,5 @@
 
 - Control Plane: The [Availability Checker](/docs/reference/glossary#availability-checker) now uses the smallest Neon compute size (.25 Compute Units) to verify that a project's computes can start and read and write data. This change allows the Availability Checker to use pre-started computes more often, which shortens availability check operation time and reduces the impact of availability checks on infrastructure and compute costs.
 - Control Plane: Removed a write check that was performed on a read-only compute instance. A write check is only necessary for read-write compute instances.
-- UI: Improved the **Pro Plan Cost Estimation** tool for Neon Free Tier users. To ensure accuracy, the tool now displays cost estimates only after the following conditions are met:
-
-  - Your account has been registered for at least one month.
-  - You have a Neon project that was created more than a month ago.
-
-  This change prevents the display of inaccurate cost estimates for new accounts. Neon Free Tier users can access the **Pro Plan Cost Estimation** tool by visiting the **Billing** page in the Neon Console.
-
-- UI: Simplified the design of the Neon sign-in page.
+- UI: Improved the **Pro Plan Cost Estimator** for Neon Free Tier users. To ensure accuracy, the tool now displays cost estimates only after a month of project usage. This change prevents the display of inaccurate cost estimates for new accounts. Neon Free Tier users can access the **Pro Plan Cost Estimator** by visiting the **Billing** page in the Neon Console.
+- UI: Implemented a new and improved design for the Neon Sign-in page.
