--- a/content/release-notes/2023-08-28-console.md
+++ b/content/release-notes/2023-08-28-console.md
@@ -4,3 +4,4 @@
 - Control Plane: Removed a write check that was performed on a read-only compute instance. A write check is only necessary for read-write compute instances.
 - UI: Improved the **Pro Plan Cost Estimator** for Neon Free Tier users. To ensure accuracy, the tool now displays cost estimates only after a month of project usage. This change prevents the display of inaccurate cost estimates for new accounts. Neon Free Tier users can access the **Pro Plan Cost Estimator** by visiting the **Billing** page in the Neon Console.
 - UI: Implemented a new and improved design for the Neon Sign-in page.
+  ![New sign in page design](/docs/relnotes/sign_in_page.png)
