--- a/content/release-notes/2023-08-16-drivers.md
+++ b/content/release-notes/2023-08-16-drivers.md
@@ -2,7 +2,7 @@
 
 The [Neon serverless driver](/docs/serverless/serverless-driver) is a low-latency Postgres driver for JavaScript and TypeScript that allows you to query data from serverless and edge environments over HTTP or WebSockets in place of TCP.
 
-The driver now supports batched queries and larger response size for queries over HTTP.
+The driver now supports batched queries and a larger response size for queries over HTTP.
 
 #### Batched queries
 
@@ -19,7 +19,7 @@ const [posts, tags] = await sql.transaction([
 ]);
 ```
 
-The `transaction()` function supports the same return format keys as the ordinary query function — `arrayMode`, `fullResults`, and `fetchOptions` — plus three additional keys for transaction configuration:
+The `transaction()` function supports the same option keys the ordinary query function — `arrayMode`, `fullResults`, and `fetchOptions` — plus three additional keys for transaction configuration:
 
 - `isolationMode`
 
@@ -27,11 +27,11 @@ The `transaction()` function supports the same return format keys as the ordinar
 
 - `readOnly`
   
-  Ensures that a `READ ONLY` transaction is used to execute queries.
+  Ensures that a `READ ONLY` transaction is used to execute queries. The default value is `false`.
 
 - `deferrable`
 
-  Ensures that a `DEFERRABLE` transaction is used to execute queries.
+  Ensures that a `DEFERRABLE` transaction is used to execute queries.  The default value is `false`.
 
 For more information, see [transaction(...) function](https://github.com/neondatabase/serverless/blob/main/CONFIG.md#transaction-function).
 
