--- a/content/release-notes/2023-09-05-console.md
+++ b/content/release-notes/2023-09-05-console.md
@@ -2,3 +2,4 @@
 
 - Added a **Billing** page to the Neon Console for Neon Enterprise and Platform Partnership custom plan users. The **Billing** page is accessible from the sidebar in the [Neon Console](https://console.neon.tech/app/projects).
 - Addressed usability issues on the **Custom** tab of the **Pro Plan Cost Estimator**, accessible from the Free Tier **Billing** page in the Neon Console. Percentage values were not restored when switching between **Enter your own values** and **Use a percentage**. Additionally, minimum, maximum, and increment values were adjusted for **Compute** and **Project storage** metrics.
+- Neon API v1 deprecation was [announced in December, 2023](/docs/release-notes/2022-12-28-console). We have now started removing code for this early version of the Neon API. [Neon API v2](https://api-docs.neon.tech/) is the currently supported version.
