--- a/content/release-notes/2023-09-08-console.md
+++ b/content/release-notes/2023-09-08-console.md
@@ -1,6 +1,6 @@
 ### Default compute settings
 
-Pro plan users can now define default compute settings for a Neon project on the **Settings** page in the Neon Console. Selecting the **Compute** option on the **Settings** page opens a **Default compute settings** page were you can define default **Compute size**, **Autoscaling**, and **Auto-suspend** settings. The default settings are used when creating new compute endpoints in the Neon Console unless those settings are overwritten by specifying different values when creating creating a branch or adding a compute endpoint to a branch.
+[Neon Pro plan](/docs/introduction/pro-plan) users can now define default compute settings for a Neon project on the **Settings** page in the Neon Console. Selecting the **Compute** option on the **Settings** page opens a **Default compute settings** page where you can define default **Compute size**, **Autoscaling**, and **Auto-suspend** settings. The default settings applied when whenever you create a new compute endpoint in the Neon Console unless you explicitly overwrite them by specifying different values.
 
 ### Fixes & improvements
 
