--- a/content/release-notes/2023-09-08-console.md
+++ b/content/release-notes/2023-09-08-console.md
@@ -1,6 +1,6 @@
 ### Default compute setting configuration
 
-[Pro plan](/docs/introduction/pro-plan) users can now configure default compute settings for a Neon project. Settings include **Compute size**, **Autoscaling**, and **Auto-suspend delay**. To define defaults, select **Settings** > **Compute** from the Neon **Dashboard** to open the **Default compute settings** page.
+[Pro plan](/docs/introduction/pro-plan) users can now configure default compute settings for a Neon project. Settings include **Compute size**, **Autoscaling**, and **Auto-suspend delay**. To define defaults, select **Settings** > **Compute** from the Neon **Dashboard** to open the **Default compute settings** page. For [Free Tier](/docs/introduction/free-tier) users, the page provides the default compute size and Auto-suspend setting.
 ![Default compute settings](/docs/relnotes/default_compute_settings.png)
 
 Default settings are applied when creating a branch or adding a compute to a branch via the Neon Console. However, if you want a compute with different settings, you can change or override the defaults when creating a branch or adding a compute.
@@ -9,7 +9,7 @@ In addition, the **Compute** widget on the Neon **Dashboard** now displays the *
 
 ### Fixes & improvements
 
-- API: Neon API v1 deprecation was [announced in December, 2023](/docs/release-notes/2022-12-28-console). We started removing code for this early version of the Neon API. If you have not yet migrated your applications to the current version of the [Neon API](https://api-docs.neon.tech/), please do so now.
+- API: Neon API v1 deprecation was [announced in December, 2023](/docs/release-notes/2022-12-28-console). We have removed code for this early version of the Neon API. If you have not yet migrated your applications to the current version of the [Neon API](https://api-docs.neon.tech/), please do so now.
 - UI: Added a **Billing** page to the Neon Console for Neon Enterprise and Platform Partnership custom plan users. The **Billing** page is accessible from the sidebar in the [Neon Console](https://console.neon.tech/app/projects).
 - UI: Addressed usability issues on the **Custom** tab of the **Pro Plan Cost Estimator**, which is accessible from the Free Tier **Billing** page in the Neon Console. Percentage values were not restored when switching between **Enter your own values** and **Use a percentage**. Additionally, minimum, maximum, and increment values were adjusted for **Compute** and **Project storage** metrics.
 - UI: The billing period drop-down menu at the top right corner of the **Billing** page now uses the current billing period as the default selection instead of the oldest billing period. This change applies to Neon Pro plan accounts.
