--- a/content/release-notes/2022-12-01-console.md
+++ b/content/release-notes/2022-12-01-console.md
@@ -14,7 +14,7 @@
 - API: Fixed the ordering of operations and projects.
 - API: Corrected the error reported when a duplicate branch name is used.
 - Control Plane: Added handling for ID collisions when creating a branch or endpoint.
-- Control Plane: Renamed the default database created in the root branch of a Neon project from `main` to `neondb`.
+- Control Plane: Renamed the ready-to-use database created in the root branch of a Neon project from `main` to `neondb`.
 - Control Plane: Added new autoscaling limits.
 - Control Plane: Added a project maintenance flag.
 - Control Plane: Added a region maintenance and testing flag.
