--- a/content/release-notes/2023-04-28-console.md
+++ b/content/release-notes/2023-04-28-console.md
@@ -6,6 +6,6 @@
 - Control Plane: Added a constraint to ensure that the maximum _Autoscaling_ compute size is greater than or equal to the minimum compute size.
 - UI: Redesigned the branch details page in the Neon Console. In addition to the information displayed previously, the page now provide usage metrics, including **Active time**, **Compute time**, **Written data**, and **Data transfer**. This information enables you to monitor usage for individual branches. Refer to our [Billing](/docs/introduction/billing) page for information about the usage metrics. The compute endpoint information on the branch details page has also been expanded to include **Compute size**, **Auto-suspend delay**, and **Last active** information. **Compute size (min)** and **Compute size (max)** values are shown for computes with the [Autoscaling](/docs/introduction/autoscaling) feature enabled. For information about these values, see [View a compute endpoint](/docs/manage/endpoints#view-a-compute-endpoint).
 - UI: Added an **Active time** column to the table on the **Branches** page in the Neon Console. This column shows the number of hours the branch compute endpoint has been active for the current month.
-- UI: The **Connection Details** dialog displayed when creating a project or a branch now provides **Pooled connection** and **Direct connection** tabs, allowing you to copy a pooled or direct connection string for the default `neondb` database. For information about connection pooling in Neon, see [Connection pooling](/docs/connect/connection-pooling).
+- UI: The **Connection Details** dialog displayed when creating a project or a branch now provides **Pooled connection** and **Direct connection** tabs, allowing you to copy a pooled or direct connection string for the ready-to-use `neondb` database. For information about connection pooling in Neon, see [Connection pooling](/docs/connect/connection-pooling).
 - UI: Updated the `prisma.js` code example accessible from the **Connection Details** widget on the Neon **Dashboard**. The connection string now includes a `connect_timeout` parameter to prevent Prisma from timing out due to cold starts, and a `pgbouncer=true` parameter, which is required when using Prisma with a pooled connection string. For more information about using Neon with Prisma, see [Connect Neon to Prisma](/docs/guides/prisma).
 - UI: Added icons and hover help to the **Usage** widget on the Neon Console.
