--- a/content/release-notes/2023-09-19-console.md
+++ b/content/release-notes/2023-09-19-console.md
@@ -1,7 +1,7 @@
 ### Fixes & improvements
 
 API: Added a [Get current user](tbd) endpoint to the Neon API for retrieving information about the current user. Please be aware that this new endpoint is currently being evaluated an is subject to change.
-API: Added database name validation to the [Create a project](https://api-docs.neon.tech/reference/createproject) endpoint to prevent creation of databases with invalid names.
+API: Added database and role name name validation to the [Create a project](https://api-docs.neon.tech/reference/createproject) endpoint to prevent creation of databases and roles with protected names.
 UI: The users with whom a Neon project is shared are now able to modify all project settings. The only exception is project deletion. Only a project owner can delete a project.
 UI: Email addresses added when sharing a Neon project with other users are now handled in a case-insensitive manner and added to the shared list in lowercase.
 UI: Fixed an issue that prevented default compute size settings that were recently configured from appearing in the **Create Compute Endpoint** modal.
