--- a/content/release-notes/2023-08-16-drivers.md
+++ b/content/release-notes/2023-08-16-drivers.md
@@ -8,7 +8,7 @@ The driver now supports batched queries and a larger response size for queries o
 
 You can now issue multiple queries at once in a single, non-interactive transaction using the `transaction()` function, which is exposed as property of the query function. For example:
 
-```js
+```javascript
 import { neon } from '@neondatabase/serverless';
 const sql = neon(process.env.DATABASE_URL);
 const showLatestN = 10;
