--- a/content/release-notes/2023-02-06-console.md
+++ b/content/release-notes/2023-02-06-console.md
@@ -6,7 +6,7 @@
   <CodeBlock shouldWrap>
 
   ```text
-  postgres://sally@ep-square-sea-260584-pooler.us-east-2.aws.neon.tech/neondb
+  postgres://alex:AbC123dEf@ep-cool-darkness-123456-pooler.us-east-2.aws.neon.tech/dbname
   ```
 
   </CodeBlock>
