--- a/content/release-notes/2023-10-06-docs.md
+++ b/content/release-notes/2023-10-06-docs.md
@@ -25,6 +25,6 @@ We want to assure you that your data privacy remains our top priority, and we wi
 
 If you have any questions or concerns about our Privacy Policy, Subprocessors, or how your data is handled, please do not hesitate to contact our dedicated Privacy Team at `privacy@neon.tech`.
 
-The Privacy Policy goes into effect on October 6th, 2023. By continuing to use Neon and access our website, you will be agreeing to these changes. 
+The Privacy Policy goes into effect on October 6th, 2023. By continuing to use Neon and access our website, you agree to these changes. 
 
 We appreciate your continued trust in Neon and thank you for being a valued customer. Your satisfaction is our priority, and we will continue to work diligently to provide you with the best possible experience.
