--- a/content/release-notes/2023-10-09-console.md
+++ b/content/release-notes/2023-10-09-console.md
@@ -1,9 +1,9 @@
 ### Fixes & improvements
 
-- UI: Added timestamp validation for [branch creation](/docs/manage/branches#create-a-branch) to prevent selecting a time before a Neon project was created or before the history retention period. The new validation also prevents selecting a time in the future. Neon supports creating point-in-time branches, but the selected time must be in the past and within the project's history retention window. For more information, see [Point-in-time restore](/docs/introduction/point-in-time-restore).
-- UI: Fixed an issue on the **Tables** page in the Neon console that caused a `relation does not exist` error when viewing table data and then selecting a different database.
-- UI: Addressed error handling issues in the [Neon-Vercel integration](https://vercel.com/integrations/neon).
-- UI: Changed the **Explain** and **Analyze** tabs in the Neon SQL Editor to buttons to reflect that these features perform a query action rather than showing a different view of existing query results. For more information about these features, see [Explain and Analyze](/docs/get-started-with-neon/query-with-neon-sql-editor#explain-and-analyze).
-- UI: Fixed a text-to-background contrast issue in dark mode in the Neon SQL Editor. Text on the **IO & Buffers** tab in the **Index Scan** output for an **Explain** query was not visible.
 - UI: Added a **Postgres version** column to the table on the [Projects](https://console.neon.tech/app/projects) page in the Neon console to  identify a project's Postgres version. Neon supports creating projects with Postgres versions 14, 15, or 16. Neon Pro Plan users can have multiple projects, created with any of the supported Postgres versions.
+- UI: Added timestamp validation for [branch creation](/docs/manage/branches#create-a-branch) to prevent selecting a time before a Neon project was created or before the defined history retention period, which is 7 days by default. The new validation also prevents selecting a time in the future. Neon supports creating point-in-time branches, but the selected time must be in the past and within the project's history retention window. For more information, see [Point-in-time restore](/docs/introduction/point-in-time-restore).
+- UI: Changed the **Explain** and **Analyze** tabs in the [Neon SQL Editor](/docs/get-started-with-neon/query-with-neon-sql-editor) to buttons to reflect that these features perform a query action rather than showing a different view of existing query results. For more information about these features, see [Explain and Analyze](/docs/get-started-with-neon/query-with-neon-sql-editor#explain-and-analyze).
+- UI: Fixed an issue on the **Tables** page in the Neon console that caused a `relation does not exist` error when viewing table data in a database and then selecting a different database.
+- UI: Fixed a text-to-background contrast issue in dark mode in the Neon SQL Editor. Text on the **IO & Buffers** tab in the **Index Scan** output for an **Explain** query was not visible.
 - UI: Fixed styling issues for the **Data transfer** card on the Neon Pro Plan **Billing** page in the Neon Console.
+- UI: Addressed error handling issues in the [Neon-Vercel integration](https://vercel.com/integrations/neon).
