--- a/content/release-notes/2023-10-16-console.md
+++ b/content/release-notes/2023-10-16-console.md
@@ -1,9 +1,15 @@
 ### Fixes & improvements
 
-UI: Added new fields for configuring the Auto-suspend delay period for Neon compute instances, allowing you to specify the delay period in seconds, minutes, hours or days.
+- UI: Added new fields for configuring the Auto-suspend delay period for Neon compute instances, allowing you to specify the delay period in seconds, minutes, hours or days.
 
-![Auto-suspend delay controls](/docs/relnotes/autosuspend_controls.png)
+    ![Auto-suspend delay controls](/docs/relnotes/autosuspend_controls.png)
 
-Neon's Auto-suspend feature automatically transitions a compute endpoint into an `Idle` state after a period of inactivity, also known as "scale-to-zero". By default, suspension occurs after 5 minutes of inactivity. [Neon Pro Plan](/docs/introduction/pro-plan) users can configure the Auto-suspend setting when creating a project, changing default compute settings, creating a compute endpoint, or editing a compute endpoint.
+    Neon's Auto-suspend feature automatically transitions a compute endpoint into an `Idle` state after a period of inactivity, also known as "scale-to-zero". By default, suspension occurs after 5 minutes of inactivity. [Neon Pro Plan](/docs/introduction/pro-plan) users can configure the Auto-suspend setting when creating a project, changing default compute settings, creating a compute endpoint, or editing a compute endpoint.
 
-For more information about this feature, see [Auto-suspend](/docs/introduction/auto-suspend).
+    For more information about this feature, see [Auto-suspend](/docs/introduction/auto-suspend).
+
+- UI: When sharing a Neon project with someone who does not have a Neon account, an email invitation is now sent to the specified email address. Previously, an email was only sent to registered Neon users.
+
+    Project sharing is a [Neon Pro Plan](/docs/introduction/pro-plan) feature that allows you to share your project with other Neon accounts. For more information, see [Project sharing](/docs/guides/project-sharing-guide).
+
+- UI: Updated PostgreSQL 14 and 15 keyword highlighting in the [Neon SQL Editor](/docs/get-started-with-neon/query-with-neon-sql-editor) and addressed other syntax highlighting and autocompletion issues.
