--- a/content/release-notes/2023-10-17-console.md
+++ b/content/release-notes/2023-10-17-console.md
@@ -4,7 +4,7 @@
 
     ![Auto-suspend delay controls](/docs/relnotes/autosuspend_controls.png)
 
-    Neon's _Auto-suspend_ feature automatically transitions a compute endpoint into an `Idle` state after a period of inactivity, also known as "scale-to-zero". By default, suspension occurs after 5 minutes of inactivity. [Neon Pro Plan](/docs/introduction/pro-plan) users can configure the auto-suspend setting when creating a project, changing default compute settings, creating a compute endpoint, or editing a compute endpoint.
+    Neon's _Auto-suspend_ feature automatically suspends a compute endpoint after a period of inactivity to minimize compute costs. This feature is also known as "scale-to-zero". By default, suspension occurs after 5 minutes of inactivity. [Neon Pro Plan](/docs/introduction/pro-plan) users can configure the auto-suspend setting when creating a project, changing default compute settings, creating a compute endpoint, or editing a compute endpoint.
 
     For more information about this feature, see [Auto-suspend](/docs/introduction/auto-suspend).
 
