--- a/content/release-notes/2022-12-01-console.md
+++ b/content/release-notes/2022-12-01-console.md
@@ -19,7 +19,7 @@
 - Control Plane: Added a project maintenance flag.
 - Control Plane: Added a region maintenance and testing flag.
 - UI: Added a branch ID value and **Create branch** button to the branch details page in the console.
-- UI: Updated the Neon Free Tier limits. See [Technical Preview Free Tier](/docs/introduction/free-tier/) for details. The new Neon Free Tier limits apply to both new and existing projects, but the previous 10 GB storage limit will be honored for existing projects that currently have more than 3 GB of data.
+- UI: Updated the Neon Free Tier limits. See [Technical Preview Free Tier](/docs/introduction/free-tier/) for details. The new Neon Free Tier limits apply to both new and existing projects, but the previous 10 GiB storage limit will be honored for existing projects that currently have more than 3 GiB of data.
 - UI: Added a **Delete endpoint** button to the **Endpoints** page.
 - UI: Updated the Neon [passwordless auth](/docs/connect/passwordless-connect/) feature to select an endpoint to connect to instead of a project.
 - UI: Fixed an endpoint polling issue.
