remove instances of support email

--- a/content/release-notes/2023-02-24-console.md
+++ b/content/release-notes/2023-02-24-console.md
@@ -8,7 +8,7 @@
 
     Instead of limiting the number of endpoint computes in the Neon Free Tier, there is now a limit of 100 compute active time hours per month. Currently, the compute hour limit applies to newly created projects only. The limit does not yet apply to existing projects. We expect to apply the limit to all projects later this quarter. Regardless of the compute hour limit, you are always able to connect to the compute endpoint associated with the primary branch of your Neon project. For more information, see [Technical Preview Free Tier](/docs/introduction/free-tier).
 
-    If you have any questions about how this change to Neon's Free Tier limits might impact your existing project, please contact us at [support@neon.tech](mailto:support@neon.tech).
+    If you have any questions about how this change to Neon's Free Tier limits might impact your existing project, please reach out to us on the [Neon community forum](https://community.neon.tech/).
 - UI: With the removal of the endpoint limit, endpoints no longer appear in the **Project limits** widget on the Neon **Dashboard**.
 - UI: With the introduction of pooled connections strings (see [Enable pooling](/docs/connect/connection-pooling#enable-connection-pooling)), enabling pooling for a compute endpoint is deprecated. With this change, the **Pooler enabled** toggle on the **Edit Compute Endpoint** dialog is now disabled and will be removed in a future release.
 - UI: Changed a column heading in the table on the **Operations** page from **ID** to **Action**. The items listed in the column are operation actions rather than IDs.
