--- a/content/release-notes/2023-08-09-console.md
+++ b/content/release-notes/2023-08-09-console.md
@@ -14,6 +14,6 @@ After an extensive testing period, we are pleased to announce that our _Configur
 - API: The [Create branch](https://api-docs.neon.tech/reference/createprojectbranch) API method now creates a branch from the project's primary branch if a `parent_id` is not provided in the create branch request.
 - API: Deprecated the `pooler_enabled` attribute in the [Create endpoint](https://api-docs.neon.tech/reference/createprojectendpoint) API method. This attribute is no longer required, as you can now enable connection pooling by adding a `-pooler` flag to a database connection string. See [Enable connection pooling](/docs/connect/connection-pooling#enable-connection-pooling).
 
-- UI: The **Compute** widget on the Neon **Dashboard** now displays the **Active computes** limit for your Neon project. There is a default limit of 20 simultaneously active computes to protect Neon accounts from unintended or unexpected usage. [Neon Pro plan](/docs/introduction/pro-plan) users can increase the limit by contacting [support@neon.tech](mailto:support@neon.tech).
+- UI: The **Compute** widget on the Neon **Dashboard** now displays the **Active computes** limit for your Neon project. There is a default limit of 20 simultaneously active computes to protect Neon accounts from unintended or unexpected usage. [Neon Pro plan](/docs/introduction/pro-plan) users can have the limit increased by [submitting a request to our support team](/docs/introduction/support).
 - UI: Fixed an issue on the **Downgrade** dialog accessible from the Neon Pro plan **Billing** page that prevented selecting a reason for downgrading.
 - UI: Fixed dark theme styling issues.
