--- a/content/release-notes/2023-09-25-docs.md
+++ b/content/release-notes/2023-09-25-docs.md
@@ -12,6 +12,6 @@ We are excited to announce that we have migrated the [Neon status page](https://
 
 3. **Same domain**: Our status page remains accessible at the same domain: [https://neonstatus.com/](https://neonstatus.com/). Only the underlying provider has changed.
 4. **No data loss**: All historical incident data and communications have been preserved.
-5. **Questions or concerns**: If you have any questions or encounter issues resulting from the migration, please reach out to our support team at [support@neon.tech](mailto:support@neon.tec).
+5. **Questions or concerns**: If you have any questions or encounter issues resulting from the migration, please reach out to us on the [Neon community forum](https://community.neon.tech/). [Neon Pro Plan](/docs/introduction/pro-plan) users can [open a support ticket](/docs/introduction/support).
 
 Thank you for your continued trust in our services. We look forward to providing you with an even better status page experience.
