--- a/content/release-notes/2022-12-28-console.md
+++ b/content/release-notes/2022-12-28-console.md
@@ -1,6 +1,6 @@
 ### Fixes & improvements
 
-- API: Added a `branch_logical_size_limit` attribute to the Neon API [Project](https://api-docs.neon.tech/reference/getproject) response body, which shows the logical data size limit for project branches. This attribute replaces the `logical_size_limit` attribute, which was shown in the [Branch](https://api-docs.neon.tech/reference/getprojectbranch) response body. The [Neon Free Tier](/docs/introduction/free-tier/) limits the logical data size of a branch to 3072MB (3GiB).
+- API: Added a `branch_logical_size_limit` attribute to the Neon API [Project](https://api-docs.neon.tech/reference/getproject) response body, which shows the logical data size limit for project branches. This attribute replaces the `logical_size_limit` attribute, which was shown in the [Branch](https://api-docs.neon.tech/reference/getprojectbranch) response body. The [Neon Free Tier](/docs/introduction/free-tier/) limits the logical data size of a branch to 3072 MiB (3 GiB).
 - API: Added the ability to delete or reassign the endpoint associated with a project's root branch. Previously, these actions could not be performed on the endpoint associated with a project's root branch. You can edit or delete an endpoint by selecting **Edit** or **Delete** from the kebab menu in the table on the **Endpoints** page.
 - API: Updated descriptions and examples in the [Neon API v2 reference](https://api-docs.neon.tech/reference/getting-started-with-neon-api).
 - API: Added validation to ensure that the name specified when creating a role does not exceed 63 bytes. Role names longer than 63 bytes caused compute startup issues.
