--- a/content/release-notes/2023-10-26-console.md
+++ b/content/release-notes/2023-10-26-console.md
@@ -1,3 +1,11 @@
+### Enhanced onboarding and project creation
+
+We enhanced our onboarding and project creation experience with a redesigned user interface. Create a project and connect to your Postgres database in seconds.
+
+<video autoPlay playsInline muted loop width="800" height="600">
+  <source type="video/mp4" src="/docs/relnotes/new_onboarding.mp4"/>
+</video>
+
 ### Fixes & improvements
 
 - UI: We've made some updates to the **Create Support Ticket** modal available via the Support link in the Neon Console sidebar. Here's what's new:
