--- a/content/release-notes/2023-10-26-console.md
+++ b/content/release-notes/2023-10-26-console.md
@@ -1,6 +1,6 @@
 ### Enhanced onboarding and project creation
 
-We enhanced our onboarding and project creation experience with a redesigned user interface. Create a project and connect to your Postgres database in seconds.
+We enhanced our onboarding and project creation experience with a redesigned user interface. Create a Neon project with a Postgres database in seconds.
 
 <video autoPlay playsInline muted loop width="800" height="600">
   <source type="video/mp4" src="/docs/relnotes/new_onboarding.mp4"/>
@@ -8,8 +8,5 @@ We enhanced our onboarding and project creation experience with a redesigned use
 
 ### Fixes & improvements
 
-- UI: We've made some updates to the **Create Support Ticket** modal available via the Support link in the Neon Console sidebar. Here's what's new:
-
-  - Introduced a **Business Impact Statement** field: This allows users to detail how an issue affects their business, enabling the Neon Support team to prioritize requests effectively.
-  - Added a consent checkbox: By ticking the checkbox, users grant Neon employees permission to connect to their databases for support purposes. This streamlines the troubleshooting process, ensuring quicker resolutions.
-- UI: The **First name** and **Last name** fields on the **Profile** settings page for your Neon  account are now editable. You can access the settings by clicking your avatar at the bottom left corner of the Neon Console and selecting **Profile**.
+- UI: Added a consent checkbox to the **Create Support Ticket** modal available via the **Support** link in the Neon Console sidebar. By ticking the checkbox, users grant Neon employees permission to connect to their databases for support purposes. This streamlines the troubleshooting process, ensuring quicker resolutions.
+- UI: You can now edit the **First name** and **Last name** fields on the **Profile** settings page for your Neon account. You can access your profile settings by clicking your avatar at the bottom left corner of the Neon Console and selecting **Profile**.
