--- a/content/release-notes/2023-10-27-console.md
+++ b/content/release-notes/2023-10-27-console.md
@@ -1,6 +1,6 @@
-### Enhanced onboarding and project creation
+### Enhanced onboarding
 
-We enhanced our onboarding and project creation experience with a redesigned user interface. Create a Neon project with a Postgres database in seconds.
+We enhanced our onboarding experience with a redesigned user interface. Create a Neon project with a Postgres database in seconds.
 
 <video autoPlay playsInline muted loop width="800" height="600">
   <source type="video/mp4" src="/docs/relnotes/new_onboarding.mp4"/>
