--- a/content/release-notes/2023-11-07-console.md
+++ b/content/release-notes/2023-11-07-console.md
@@ -4,4 +4,4 @@ We streamlined the connection snippets in the [Connection Details](/docs/connect
 - A new eye icon lets you toggle password visbility within all connection snippets. Note that this feature is for visual display only; copied snippets always include the password.
 - All connection snippets now include `sslmode=require`, enabling encryption by default.
 
-These changes apply wherever the Connection Details pane appears: on the Dashboard page, when you create a branch, and when you create a project.
+These changes apply wherever the **Connection Details** pane appears: on the **Dashboard** page, when you create a branch, and when you create a project.
