--- a/content/release-notes/2023-11-08-console.md
+++ b/content/release-notes/2023-11-08-console.md
@@ -1,6 +1,11 @@
+---
+description: We streamlined the connection snippets in the Connection Details panel for better usability
+---
+
 ### Improved connection snippets
 
 We streamlined the connection snippets in the [Connection Details](/docs/connect/connect-from-any-app) panel for better usability:
+
 - A new eye icon lets you toggle password visbility within all connection snippets. Note that this feature is for visual display only; copied snippets always include the password.
 - All connection snippets now include `sslmode=require`, enabling encryption by default.
 
