--- a/content/release-notes/2023-11-29-console.md
+++ b/content/release-notes/2023-11-29-console.md
@@ -5,4 +5,4 @@ description: Read about the latest product updates from Neon
 ### Fixes & improvements
 
 - UI: The **Create new branch** page was redesigned to improve usability. You can view the redesigned page by selecting the **Branches** page in the Neon Console, and clicking **New Branch**.
-- UI: The **Neon SQL Editor** now paginates large result sets. You can navigate paginated results by clicking the page numbers at the bottom of the **Neon SQL Editor** page. 
+- UI: The **Neon SQL Editor** now supports pagination for better handling of large result sets. You can navigate paginated results by clicking the page numbers at the bottom of the **Neon SQL Editor** page. 
