--- a/content/release-notes/2023-11-30-console.md
+++ b/content/release-notes/2023-11-30-console.md
@@ -8,5 +8,5 @@ description: Neon Console fixes
 - UI: Fixed an issue preventing older projects from storing passwords, resulting in the following error when attempting to reveal a masked password in the **Connection Details** widget: `Request failed: storing passwords is not enabled for a project`.
 - UI: Corrected a Java code snippet highlighting issue in the **Connection Details** widget.
 - UI: Corrected an SQL syntax highlighting issue in the **Neon SQL Editor**.
-- UI: Fixed an issue with the **History retention** slider on the **Storage** page, which is accessed via the **Settings** page in the Neon Console. Specifying 0 incorrectly set the value to the 7-day history retention default.
+- UI: Fixed an issue with the **History retention** slider on the **Storage** page, which is accessed from the **Settings** page in the Neon Console. Specifying a `0` value would set the retention period to the 7-day default.
 - UI: Fixed an issue that left a Neon project visible from the dashboard after it was deleted from another instance of the Neon Console.
